--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,5 +31,27 @@ services:
     ports:
       - "8090:8090"
 
+  prometheus: 
+    container_name: prometheus
+    image: quay.io/prometheus/prometheus:latest
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus_data:/prometheus
+    depends_on:
+      - library-adp
+
+  grafana:
+    image: grafana/grafana-enterprise
+    ports:
+      - "3000:3000"  
+    volumes:
+      - grafana_data:/var/lib/grafana 
+    depends_on:
+      - prometheus
+
 volumes:
   postgres-data:
+  prometheus_data:
+  grafana_data:
